--- a/HTTP-SERVER-1/package.json
+++ b/HTTP-SERVER-1/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4"
   }
 }
